Fixing an alignment bug

--- a/www/assets/scss/components/_products.scss
+++ b/www/assets/scss/components/_products.scss
@@ -183,6 +183,8 @@ html.no-touch {
 .products__title {
   margin: 3px 0 5px;
   font-size: $font-size;
+  height:40px;
+  overflow:hidden;
 
   a {
     @extend %color-secondary-color;
